[package]
name = "rich_text_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
color-eyre = "0.6.2"
hyper = "1.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"

tower-http = { version = "0.4.0", features = ["cors", "trace"] } # added
http = "0.2.9"
clap = { version = "4.5.2", features = ["derive"] }
dotenv = "0.15.0"
regex = "1.10.3"
uuid = { version = "1.7.0", features = ["v6", "serde"] }
